--- a/FrontEnd/css/StandardStyle.css
+++ b/FrontEnd/css/StandardStyle.css
@@ -1,12 +1,11 @@
 body {
     background-color: lightblue;
 }
-button {
+input {
     text-align: center;
     width: 100%;
     max-width: 300px;
-    height: auto;
-    display: block;
+    
     padding: 10px 0;
     margin: 20px auto;
 }
@@ -18,9 +17,11 @@ img {
     max-height: 170;
 }
 input {
-    text-align: left;
+    text-align: center;
     width: 100%;
     max-width: 300px;
+    height: auto;
+    display: block;
     height:  auto;
     padding: 10px;
     margin: 10px auto;
