--- a/public_html/FrontEnd/css/MenuStyle.css
+++ b/public_html/FrontEnd/css/MenuStyle.css
@@ -25,7 +25,7 @@ img {
     max-height: 170;
 }
 input {
-    text-align: left;
+    text-align: center;
     width: 100%;
     max-width: 300px;
     height:  auto;
